# DCMTK-old

./: CMakeLists.txt
CMake/: 3rdparty.cmake  DCMTKBuildTreeSettings.cmake.in  DCMTKConfig.cmake.in  DCMTKConfigVersion.cmake.in  GenerateDCMTKConfigure.cmake  dcmtkMacros.cmake  dcmtkPrepare.cmake  dcmtkTryRun.cmake
config/tests/: arith.cc
dcmdata/apps/: dcm2pdf.cc  dcm2xml.cc  dcmconv.cc  dcmcrle.cc  dcmdrle.cc  dcmdump.cc  dcmgpdir.cc  dump2dcm.cc  mdfconen.cc  pdf2dcm.cc  xml2dcm.cc
dcmdata/include/dcmtk/dcmdata/: dcistrmz.h  dcostrmz.h
dcmdata/tests/: tpread.cc
dcmimage/apps/: dcm2pnm.cc  dcmquant.cc  dcmscale.cc
dcmimage/libsrc/: dipipng.cc  dipitiff.cc
dcmjpeg/apps/: dcmcjpeg.cc  dcmdjpeg.cc
dcmjpls/apps/: dcmcjpls.cc  dcmdjpls.cc
dcmnet/apps/: dcmsend.cc  echoscu.cc  findscu.cc  getscu.cc  movescu.cc  storescp.cc  storescu.cc  termscu.cc
dcmnet/include/dcmtk/dcmnet/: scp.h
dcmnet/libsrc/: scu.cc
dcmpstat/apps/: dcmmkcrv.cc  dcmmklut.cc  dcmp2pgm.cc  dcmprscp.cc  dcmprscu.cc  dcmpschk.cc  dcmpsmk.cc  dcmpsprt.cc  dcmpsrcv.cc  dcmpssnd.cc
dcmqrdb/apps/: dcmqridx.cc  dcmqrscp.cc  dcmqrti.cc
dcmrt/apps/: drtdump.cc
dcmsign/apps/: dcmsign.cc
dcmsr/apps/: dsr2html.cc  dsr2xml.cc  dsrdump.cc  xml2dsr.cc
dcmwlm/apps/: wlcefs.cc
ofstd/include/dcmtk/ofstd/variadic/: helpers.h
